<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#FFFFFF"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.ShowScoreActivity"
    android:orientation="vertical"
    android:gravity="center">



    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:textColor="@color/Primary"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txtscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity=""
        android:gravity="center"
        android:text="@string/Number"
        android:textAlignment="center"
        android:textColor="@color/Primary"
        android:textSize="140sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Status"
        android:textColor="@color/Primary"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="@drawable/btn_blue"
        android:onClick="showAnswers"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/showAnswers" />


</LinearLayout>