<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF">
    <TextView
        android:id="@+id/lblQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/QuestionAppear"
        android:textAlignment="center"
        android:textColor="@color/Primary"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/radio_group_orange_questions"
        android:paddingLeft="30dp"
        android:paddingTop="10dp"
        android:paddingRight="30dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblQuestion"
        app:layout_constraintVertical_bias="0.064">


        <RadioButton
            android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:buttonTint="@color/Primary"
            android:text="@string/OptionA"
            android:textColor="@color/Primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:buttonTint="@color/Primary"
            android:text="@string/OptionB"
            android:textColor="@color/Primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:buttonTint="@color/Primary"
            android:text="@string/OptionC"
            android:textColor="@color/Primary"

            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:buttonTint="@color/Primary"
            android:text="@string/OptionD"
            android:textColor="@color/Primary"

            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/confirm"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:background="@drawable/back1"
        android:onClick="loadAnswer"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>