<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".otpverifyactvity">


    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/smartphone"/>

    <TextView
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:elevation="50dp"
        android:letterSpacing="0.08"
        android:text="@string/enter_otp_sent_to_your_phone"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:textColor="@color/Primary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_marginBottom="20dp">


        <EditText
            android:layout_width="297dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/otp"
            android:maxLength="6"
            android:padding="10dp"
            android:background="@drawable/back1"
            android:id="@+id/verifyotptext"
            android:layout_gravity="center"
            android:textColorHint="@color/Primary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical"
        android:gravity="center">
        <Button
            android:layout_width="320dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/verify"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/verifybutton"/>

        <ProgressBar
            android:layout_width="66dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progbar2"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:gravity="center"
        android:id="@+id/resendotptext"
        android:text="@string/resend_the_otp"
        android:textSize="20sp"
        android:textColor="@color/Primary"/>
</LinearLayout>