<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/course1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="3dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border_cardview"
            android:clipToOutline="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img1"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/round_corner"
                    android:clipToOutline="true"/>
                <TextView
                    android:layout_marginLeft="180dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-100dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/course1"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/course2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="3dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img2"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/round_corner"
                    android:clipToOutline="true"/>
                <TextView
                    android:layout_marginLeft="180dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-100dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/course2"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/course3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="3dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img3"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/round_corner"
                    android:clipToOutline="true"/>
                <TextView
                    android:layout_marginLeft="180dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-100dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/course3"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_home"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/course4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="3dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img4"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/round_corner"
                    android:clipToOutline="true"/>
                <TextView
                    android:layout_marginLeft="180dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-100dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/course4"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/course5"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:elevation="3dp"
            android:layout_marginBottom="100dp"
            app:cardCornerRadius="20dp"
            android:layout_marginHorizontal="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/img5"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:background="@drawable/round_corner"
                    android:clipToOutline="true"/>
                <TextView
                    android:layout_marginLeft="180dp"
                    android:layout_marginRight="14dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-100dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/course5"
                    android:textColor="@color/black"
                    android:layout_marginBottom="30dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>